# tlc-trip-record-data

./: .gitignore  README.md  justfile  main.sh  requirements.txt
data/: README.MD
models/: README.MD
notebooks/: README.MD
output/: README.MD
scripts/: README.MD  load-secrets.sh  prepare-bin.sh  stage1.sh  stage2.sh  stage3.sh
scripts/dataset-organization/: .gitignore  README.md  build.sbt  create-tables.py  download-sources.py  generate-index.py  load-data-to-psql.py  load-data.sc  merge-parquets.py  pyproject.toml
scripts/stage01/: .gitignore  pyproject.toml  readme.md
scripts/stage01/create-tables/: create-tables.py  create_tables.py  readme.md
scripts/stage01/dataloader/: .scalafmt.conf  build.sbt  readme.md
scripts/stage01/dataloader/project/: plugins.sbt
scripts/stage01/dataloader/src/main/scala/tlcdataloader/: TlcDataLoader.scala
scripts/stage01/download/: download_sources.py  readme.md
scripts/stage01/index/: generate-index.py  generate_index.py  readme.md
scripts/stage01/index/templates/: template.html  template.md  template.typ
scripts/stage01/merge/: merge-parquets.py  merge_parquets.py  readme.md
scripts/stage02/: q3.py  q4.py  q5.py  q6.py  q7.py  q8.py  readme.md  requirements.txt
scripts/stage03/: gradient_boosting.py  linear_regression.py  main.py  preprocessing.py  random_forest.py  readme.md  requirements.txt
sql/: README.MD  copy-data.sql  create-table-hive.sql  create-table-psql.sql  create-table.sql  db.hql  partition.hql  q1.hql  q2.hql  q3.hql
(+2 files in other folders)
